RESOLVED FIXED30374
[GStreamer] Doesn't check if caps are valid in ::naturalSize()
https://bugs.webkit.org/show_bug.cgi?id=30374
Summary [GStreamer] Doesn't check if caps are valid in ::naturalSize()
Sebastian Dröge (slomo)
Reported 2009-10-14 21:16:05 PDT
...which leads to assertions: GStreamer-CRITICAL **: gst_caps_is_fixed: assertion `GST_IS_CAPS (caps)' failed aborting... Attached trivial patch fixes this.
Attachments
0003-Check-if-caps-are-valid-before-parsing-them.patch (2.43 KB, patch)
2009-10-14 21:18 PDT, Sebastian Dröge (slomo)
no flags
0003-Check-if-caps-are-valid-before-parsing-them.patch (2.47 KB, patch)
2009-10-14 22:49 PDT, Sebastian Dröge (slomo)
no flags
Sebastian Dröge (slomo)
Comment 1 2009-10-14 21:18:10 PDT
Created attachment 41204 [details] 0003-Check-if-caps-are-valid-before-parsing-them.patch
Sebastian Dröge (slomo)
Comment 2 2009-10-14 21:18:39 PDT
Sebastian Dröge (slomo)
Comment 3 2009-10-14 22:49:00 PDT
Created attachment 41209 [details] 0003-Check-if-caps-are-valid-before-parsing-them.patch Updated patch, we also need to check for *fixed* caps there.
WebKit Commit Bot
Comment 4 2009-10-15 06:25:42 PDT
Comment on attachment 41209 [details] 0003-Check-if-caps-are-valid-before-parsing-them.patch Clearing flags on attachment: 41209 Committed r49622: <http://trac.webkit.org/changeset/49622>
WebKit Commit Bot
Comment 5 2009-10-15 06:25:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.