2009-10-15  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

Reviewed by Gustavo Noronha.

        https://bugs.webkit.org/show_bug.cgi?id=30374

        Check if caps are valid before parsing them

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::duration):
        Check if caps are valid before parsing them in ::naturalSize().
        This prevents assertions if the natural size should be calculated
        before the video caps are negotiated.

Canonical link: https://commits.webkit.org/41086@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49622 268f45cc-cd09-0410-ab3c-d52691b4dbfc